[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project]
name = 	"NaturoPy"
version = "1.0.0"
description = "Python Computational Intelligence library."
readme = "README.md"
dependencies = [
	"numpy>=2.1.3",
]

[project.urls]
"Homepage" = "https://github.com/Ben-vD/NaturoPy"
